--- a/Primitive AntiVirus/Primitive AntiVirus.csproj
+++ b/Primitive AntiVirus/Primitive AntiVirus.csproj
@@ -36,7 +36,11 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Comparison.cs" />
+    <Compile Include="MainView.cs" />
+    <Compile Include="ProcessList.cs" />
     <Compile Include="SystemMonitor.cs" />
+    <Compile Include="TrackingAndIso.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
