--- a/Primitive AntiVirus/Primitive AntiVirus.csproj
+++ b/Primitive AntiVirus/Primitive AntiVirus.csproj
@@ -44,6 +44,7 @@
     <Compile Include="TrackingAndIso.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Diagnostics.Process, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Diagnostics.Process.4.3.0\lib\net461\System.Diagnostics.Process.dll</HintPath>
